k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: percolate
  labels:
    name: percolate
    istio-injection: enabled
